# torq-a3r

./: .gitignore  Dockerfile  README.me  run-default.sh  run-test.sh
code/cpp/bundles/prelim/contrib/nathaniel/cutelyst/: Dockerfile
code/cpp/bundles/prelim/contrib/nathaniel/cutelyst/apps/Chasm-app/Chasm-app/: CMakeLists.txt
code/cpp/bundles/prelim/contrib/nathaniel/cutelyst/apps/chasm-vm-demo/: NOTES
code/cpp/bundles/prelim/contrib/nathaniel/cutelyst/docker/: run-default.sh
code/cpp/bundles/prelim/contrib/nathaniel/cutelyst/docker/-prep_/: docker-build.sh  docker-push.sh  docker-run-bash.sh  docker-run.sh
code/cpp/src/prelim/: accessors.h  global-types.h  textio.h
code/cpp/src/prelim/contrib/nathaniel/cutelyst/: _user-qt.blank
code/cpp/src/prelim/contrib/nathaniel/cutelyst/apps/: user-specific-pin.txt
docker/: docker-build.sh
docker/lib/docker-only/: NOTES
docs/: innertorq.tex  torq-by-way.tex  torq-pdf-svg.tex  torq.tex  torqpics.tex
docs/cat/: cat.gt
docs/private/comp/: conclusion.gt  cv  ic  intro.gt  notes  section-1.gt  section-2.gt
docs/private/comp/ss/: all  all-2  all-2-c.ods  all-2.ods  all-3  all-3 (copy)  all-3-c.ods  all-3.ods  all-4  all-4-c.ods  all-4.ods  all-c.ods  list  list (copy)  list.ods  notes  patterns.ods
docs/private/comp/ss (copy)/: all-2.ods  all-3.ods  all-4.ods
svg/: run-2-svg.sh
svg/icons/: down-inactive.xcf  down.xcf  downl-active.xcf  downl-inactive.xcf  up-inactive.xcf  up.xcf  upl-active.xcf  upl-inactive.xcf
svg/templates/: overlay.htm
(+276 files in other folders)
